Fix popout window overflow. fixes #43

--- a/gui/css/style.less
+++ b/gui/css/style.less
@@ -46,7 +46,6 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 	font-family: 'Lucida Grande', sans-serif;
 	font-size: 12px;
 	height: 100%;
